<resources>
    <string name="app_name">Rum-A</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="googpleapikey"> AIzaSyCjbom3O42HEEOtUgF4tq0FpGDfKMuVFQg</string>
    <string name="facebook_app_id">533867300360115</string>
    <string name="fb_login_protocol_scheme">fb533867300360115</string>

    <string name="action_settings">Settings</string>
    <string name="str_looking_for">Looking for:</string>
    <string name="str_rent">Rent</string>
    <string name="str_seeking_for">Seeking a:</string>
    <string name="str_next">Next</string>
    <string name="str_already_account">Already have an account?</string>
    <string name="str_login">Log in</string>
    <string name="str_user_name">User Name</string>
    <string name="str_edit_profile">Edit profile</string>
    <string name="str_sign_in_to">Sign in to your account</string>
    <string name="str_facebook">Facebook</string>
    <string name="str_google">Google</string>
    <string name="str_or">OR</string>
    <string name="str_email_address">Email Address</string>
    <string name="str_passwrd">Password</string>
    <string name="str_sign_in">Sign in</string>
    <string name="str_dont_have_account">Don\' have an account?</string>
    <string name="str_sign_up">Sign up</string>
    <string name="str_title">Title</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_re_passwrd">Re-Enter-Password</string>
    <string name="str_agree_term_conditions"><![CDATA[I have agree to terms & conditions]]></string>
    <string name="str_term_conditions"><![CDATA[agree to terms & conditions]]></string>
    <string name="str_complete">Complete</string>
    <string name="str_distance">Distance</string>
    <string name="str_miles">Miles</string>
    <string name="str_km">Km</string>
    <string name="str_price">Price</string>
    <string name="str_seeking">Seeking</string>
    <string name="str_sell">Sell</string>
    <string name="str_lese">Lease</string>
    <string name="str_house">House</string>
    <string name="str_apartment">Apartment</string>
    <string name="str_commercial">Commercial Space</string>
    <string name="str_Land">Land</string>
    <string name="str_private_account">Private Account</string>
    <string name="str_push_notofocations">Push Notification</string>
    <string name="str_feedback">Feedback</string>
    <string name="str_logout">Logout</string>
    <string name="str_delete_account">Delete Account</string>
    <string name="str_Home">Home</string>
    <string name="str_profile">Profile</string>
    <string name="str_myproperty">My Property</string>
    <string name="str_settings">Settings</string>
    <string name="str_about">About Us</string>
    <string name="str_faq">Faq</string>
    <string name="finding_property">Searching properties</string>
    <string name="like_">Like</string>
    <string name="nope_">Nope</string>
    <string name="str_upload_property_pic">Upload property picture</string>
    <string name="str_name">Name</string>
    <string name="str_location">Location</string>
    <string name="str_desc">Description</string>
    <string name="str_submit">Submit</string>
    <string name="toast_enter_nick_name">Please enter first name.</string>
    <string name="error_toast_enter_first_name">Please enter first name</string>
    <string name="error_toast_enter_last_name">Please enter last name</string>
    <string name="error_toast_invalid_email">Please enter valid email address</string>
    <string name="error_min_pas_len">Password should be minimum of 6 characters!</string>
    <string name="error_toast_re_enter_password">Please re-enter your password</string>
    <string name="error_toast_password_not_match">Re-Entered Password must be same with password</string>
    <string name="error_toast_accept_terms">Please accept terms and conditions</string>
    <string name="sender_id">23</string>
    <string name="str_proerty_liked">PROPERTIES LIKED</string>
    <string name="str_proerty_fav">Favorited properties</string>
    <string name="permission_denied">Permissions denied</string>
    <string name="str_about_">About</string>
    <string name="str_sample_">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="str_im_here">I am here to:</string>
    <string name="str_budget">Budget</string>
    <string name="str_properties">Properties:</string>
    <string name="str_properties_">Properties</string>
    <string name="str_add_property">Add Property</string>
    <string name="error_location">Plesae select location address</string>
    <string name="error_price">Plesae add price</string>
    <string name="error_desc">Please add description</string>
    <string name="session_expired"> Session Expired. Plesae login again</string>
    <string name="str_buy">Buy</string>
    <string name="str_lease">Lease</string>
    <string name="str_about_me">About me</string>
    <string name="str_save">Save</string>
    <string name="str_empty_message">Found empty space </string>
    <string name="str_select_location">Select location</string>
    <string name="str_min_price">$100000</string>
    <string name="str_max_price">$100000000</string>
    <string name="error_toast_about">Please add few words about you.</string>
    <string name="no_property_found">No property found</string>
    <string name="str_property_detail">Property Detail</string>
    <string name="str_property_type">Property Type</string>
    <string name="str_looking_">Looking</string>
    <string name="str_edit">Edit</string>
    <string name="str_delete">Delete</string>
    <string name="str_click_back_to_exit">Please click BACK again to exit</string>
    <string name="str_currency">Currrency</string>
    <string name="str_like">Like</string>
    <string name="str_type_message">Type your message..</string>
    <string name="str_chat">Chat</string>
    <string name="str_liked_properties_">Liked Properties</string>
    <string name="str_your_property">Your property</string>
    <string name="chat_attachment">Attachment</string>
    <string name="connection_error">Connection error please wait..</string>
    <string name="reconnect_alert">Reconnecting please wait..</string>
    <string name="str_no_one_message_you_error">No one message you for this property</string>
    <string name="msg_error">User not available for chat</string>
    <string name="str_feedback_hint_text">Provide your  feedbacks</string>
    <string name="str_no_property_found">No property found</string>
    <string name="error_toast_enter_text">Please add few words</string>
    <string name="str_ok">Ok</string>
    <string name="str_are_you_sure">Are you sure?</string>
    <string name="str_delete_property">Delete property</string>
    <string name="str_delete_message">Do you want to delete this property.</string>
</resources>
