<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.app.rum_a.utils.views.RumTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_5"
        android:paddingTop="@dimen/margin_5"
        android:text="@string/str_distance"
        android:textColor="@color/color_black"
        android:textSize="@dimen/txt_15" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.app.rum_a.utils.views.RumCheckBox
            android:id="@+id/distanceTypeMiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/selector_circle_checkbox"
            android:drawablePadding="@dimen/margin_10"
            android:text="@string/str_miles" />

        <com.app.rum_a.utils.views.RumCheckBox
            android:id="@+id/distanceTypeKm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:background="@null"
            android:button="@null"
            android:drawableLeft="@drawable/selector_circle_checkbox"
            android:drawablePadding="@dimen/margin_10"
            android:text="@string/str_km" />
    </LinearLayout>

    <com.app.rum_a.utils.views.RumTextView
        android:id="@+id/txtProgressDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/txt_11" />

    <com.app.rum_a.utils.views.SeekBar
        android:id="@+id/seekBarDistanceRangedistanceRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:max="1000"
        android:paddingLeft="@dimen/margin_10"
        android:paddingRight="@dimen/margin_10"
        android:thumb="@drawable/ic_seek_thumb_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.app.rum_a.utils.views.RumTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_5"
            android:paddingTop="@dimen/margin_5"
            android:text="@string/str_price"
            android:textColor="@color/color_black"
            android:textSize="@dimen/txt_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.app.rum_a.utils.views.RumTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/margin_5"
                android:text="@string/str_currency" />

            <Spinner
                android:id="@+id/currencySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"></Spinner>
        </LinearLayout>

        <com.app.rum_a.utils.views.RangeBar
            android:id="@+id/price_range_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:connectingLineColor="@color/colorAccent"
            app:connectingLineWeight="1dp"
            app:thumbImageNormal="@drawable/ic_seek_thumb_normal"
            app:thumbImagePressed="@drawable/ic_seek_thumb_pressed"
            app:tickCount="10"
            app:tickHeight="0dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.app.rum_a.utils.views.RumTextView
                android:id="@+id/mini_price_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="@dimen/margin_5"
                android:text="@string/str_min_price"
                android:textSize="@dimen/txt_10" />

            <com.app.rum_a.utils.views.RumTextView
                android:id="@+id/max_price_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="@dimen/margin_5"
                android:text="@string/str_max_price"
                android:textSize="@dimen/txt_10" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>