<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_10"
    android:layout_marginRight="@dimen/margin_10"
    android:orientation="vertical">

    <com.app.rum_a.utils.views.RumTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_5"
        android:text="@string/str_about_"
        android:textAllCaps="true"
        android:textColor="@color/color_black"
        android:textSize="@dimen/txt_15" />

    <com.app.rum_a.utils.views.RumTextView
        android:id="@+id/user_about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_5"
        android:text="@string/str_sample_"
        android:textSize="@dimen/txt_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.app.rum_a.utils.views.RumTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/margin_5"
            android:text="@string/str_im_here"
            android:textColor="@color/color_black"
            android:textSize="@dimen/txt_15" />

        <com.app.rum_a.utils.views.RumTextView
            android:id="@+id/user_looking_type_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/margin_5"
            android:text="Buy"
            android:textColor="@color/color_black"
            android:textSize="@dimen/txt_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.app.rum_a.utils.views.RumTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/margin_5"
            android:text="@string/str_budget"
            android:textColor="@color/color_black"
            android:textSize="@dimen/txt_15" />

        <com.app.rum_a.utils.views.RumTextView
            android:id="@+id/user_budget_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/margin_5"
            android:text="$ 20000"
            android:textColor="@color/color_black"
            android:textSize="@dimen/txt_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.app.rum_a.utils.views.RumTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/margin_5"
            android:text="@string/str_seeking"
            android:textColor="@color/color_black"
            android:textSize="@dimen/txt_15" />

        <com.app.rum_a.utils.views.RumTextView
            android:id="@+id/user_seeking_type_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/margin_5"
            android:text="House"
            android:textColor="@color/color_black"
            android:textSize="@dimen/txt_15" />
    </LinearLayout>

</LinearLayout>